--- a/analysis-engine/src/main/webapp/WEB-INF/web.xml
+++ b/analysis-engine/src/main/webapp/WEB-INF/web.xml
@@ -1,28 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	<display-name>rSYBL</display-name>
- 
-    <listener>
-    <listener-class>
-            com.sun.xml.ws.transport.http.servlet.WSServletContextListener
-    </listener-class>
-</listener>
  <servlet>
-        <servlet-name>ServletAdaptor</servlet-name>
+        <servlet-name>Jersey REST Service</servlet-name>
         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
         <init-param>
-            <description>Multiple packages, separated by semicolon(;), can be specified in param-value</description>
             <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>at.ac.tuwien.dsg.rSYBL.analysisEngine.webAPI</param-value>
+            <param-value>at.ac.tuwien.dsg.rSybl.analysisEngine.webAPI</param-value>
         </init-param>
+      
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>ServletAdaptor</servlet-name>
-        <url-pattern>/REST_WS/*</url-pattern>
+        <servlet-name>Jersey REST Service</servlet-name>
+        <url-pattern>/restWS/*</url-pattern>
     </servlet-mapping>
   <session-config>
     <session-timeout>120</session-timeout>
   </session-config>
+      <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
-   
+ 
