--- a/analysis-engine/src/main/resources/config.properties
+++ b/analysis-engine/src/main/resources/config.properties
@@ -15,8 +15,8 @@ MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.
 #enforcement
 EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.enforcementPlugins.openstack.EnforcementOpenstackAPI
 
-CertificateName = tiramolaTestKey
-CertificatePath = ./config/tiramolatestkey.pem
+CertificateName = key
+CertificatePath = ./config/key.pem
 AccessIP = 128.130.172.214
 CloudAPIType = openstack-nova
 CloudAPIEndpoint = http://openstack.infosys.tuwien.ac.at:5000/v2.0
