--- a/analysis-engine/src/main/resources/config.properties
+++ b/analysis-engine/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #monitoring
-MonitoringServiceURL = http://localhost:8080/AnalysisMonitoringEnforcementService-0.0.1/SyblAPIService?wsdl
+MonitoringServiceURL = http://localhost:8080/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
 						
 #controlAndDeployment
 CloudServiceModelDescription = ./config/serviceDescription.xml
@@ -13,19 +13,15 @@ ApplicationSpecificInformation = files
 #monitoring
 MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.melaPlugin.MELA_API
 #enforcement
-EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.enforcementPlugins.openstack.EnforcementOpenstackAPI
+EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.celar.EnforcementPluginCELAR
 
-CertificateName = key
-CertificatePath = ./config/key.pem
-AccessIP = 128.130.172.214
-CloudAPIType = openstack-nova
-CloudAPIEndpoint = http://openstack.infosys.tuwien.ac.at:5000/v2.0
-#UserName
-CloudUser =
-#Password
-CloudPassword =
+CertificateName = tiramolaTestKey
+CertificatePath = ./config/tiramolatestkey.pem
+
+#CloudAPIType = openstack-nova
+#CloudAPIEndpoint = http://openstack.infosys.tuwien.ac.at:5000/v2.0
 
 CompositionRulesMELA = ./config/compositionRules.xml
 
 #REFRESH_PERIOD - how often decisions should be taken
-REFRESH_PERIOD = 120000
+REFRESH_PERIOD = 60000
