--- a/rSYBL-analysis-engine/pom.xml
+++ b/rSYBL-analysis-engine/pom.xml
@@ -181,6 +181,7 @@
 	
 	</dependencies>
 	<build>
+	        <finalName>rSYBL-${project.version}</finalName>
     <plugins>
 			 <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
