added distributionManagement tag.

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,18 @@
     <module>rSYBL-client</module>
   </modules>
 
-
+  <distributionManagement>
+      <repository>
+          <id>celar.releases</id>
+          <name>CELAR Releases</name>
+          <url>https://snf-153390.vm.okeanos.grnet.gr/nexus/content/repositories/releases</url>
+      </repository>
+      <snapshotRepository>
+          <id>celar.snapshots</id>
+          <name>CELAR Snapshots</name>
+          <url>https://snf-153390.vm.okeanos.grnet.gr/nexus/content/repositories/snapshots</url>
+      </snapshotRepository>
+  </distributionManagement>
 
 <!-- up to here into celar-discribution POM.  -->
 
