--- a/rSYBL-analysis-engine/src/main/resources/config/Log4j.properties
+++ b/rSYBL-analysis-engine/src/main/resources/config/Log4j.properties
@@ -1,5 +1,4 @@
-log4j.rootLogger=all, stdout, file
-log4j.melaAnalysisServiceLogger=all, stdout, file
+log4j.rootLogger= file
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
