--- a/rSYBL-analysis-engine/src/main/resources/config/Log4j.properties
+++ b/rSYBL-analysis-engine/src/main/resources/config/Log4j.properties
@@ -1,5 +1,5 @@
-log4j.rootLogger= all, stdout, file
-log4j.rSYBLLogger=all, stdout,file
+log4j.rootLogger= file
+log4j.rSYBLLogger=file
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -8,7 +8,8 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File= /opt/apache-tomcat-7.0.42/temp/logs/rSYBL_${recording_date}.log
+#log4j.appender.file.File= /opt/apache-tomcat-7.0.42/temp/logs/rSYBL_${recording_date}.log
+log4j.appender.file.File= ../logs/rSYBL_${recording_date}.log
 log4j.appender.file.immediateFlush=true
 
 log4j.appender.file.MaxFileSize=10MB
