--- a/rSYBL-analysis-engine/src/main/resources/config/SYBL_Log4j.properties
+++ b/rSYBL-analysis-engine/src/main/resources/config/SYBL_Log4j.properties
@@ -7,8 +7,8 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-#log4j.appender.file.File=/opt/apache-tomcat-7.0.42/temp/logs/rSYBL_Parsing_${recording_date}.log
-log4j.appender.file.File=../logs/rSYBL_Parsing_${recording_date}.log
+log4j.appender.file.File=/opt/apache-tomcat-7.0.42/temp/logs/rSYBL_Parsing_${recording_date}.log
+#log4j.appender.file.File=../logs/rSYBL_Parsing_${recording_date}.log
 log4j.appender.file.immediateFlush=true
 
 log4j.appender.file.MaxFileSize=10MB
