modified log config

--- a/rSYBL-analysis-engine/src/main/resources/config/Log4j.properties
+++ b/rSYBL-analysis-engine/src/main/resources/config/Log4j.properties
@@ -1,20 +1,13 @@
-log4j.rootLogger= file
-log4j.rSYBLLogger=file
+log4j.rootLogger=ALL,  default.file
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
-
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File= /opt/apache-tomcat-7.0.42/temp/logs/rSYBL_${recording_date}.log
-#log4j.appender.file.File= ../logs/rSYBL_${recording_date}.log
-log4j.appender.file.immediateFlush=true
-
-log4j.appender.file.MaxFileSize=10MB
-# Keep one backup file
-log4j.appender.file.MaxBackupIndex=1
-
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+#log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+log4j.appender.default.file=org.apache.log4j.RollingFileAppender
+log4j.appender.default.file.append=true
+log4j.appender.default.file.file=/tmp/rSYBL_${recording_date}.log
+log4j.appender.default.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.default.file.layout.ConversionPattern=%-5p %c: %m%n
+log4j.appender.default.file.immediateFlush=true
