--- a/rSYBL-analysis-engine/src/main/resources/config/Log4j.properties
+++ b/rSYBL-analysis-engine/src/main/resources/config/Log4j.properties
@@ -7,7 +7,7 @@ log4j.rootLogger=ALL,  default.file
 #log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 log4j.appender.default.file=org.apache.log4j.RollingFileAppender
 log4j.appender.default.file.append=true
-log4j.appender.default.file.file=/tmp/rSYBL_${recording_date}.log
+log4j.appender.default.file.file=/tmp/rSYBL/rSYBL_${recording_date}.log
 log4j.appender.default.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.default.file.layout.ConversionPattern=%-5p %c: %m%n
 log4j.appender.default.file.immediateFlush=true
