--- a/rSYBL-analysis-engine/src/main/resources/config.properties
+++ b/rSYBL-analysis-engine/src/main/resources/config.properties
@@ -1,6 +1,8 @@
 #monitoring
-MonitoringServiceURL = http://localhost:8080/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
+MonitoringServiceURL = http://localhost/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
 #MonitoringServiceURL = http://localhost:8080/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
+
+EnforcementServiceURL = http://localhost/celar-orchestrator/deployment/
 						
 #controlAndDeployment
 CloudServiceModelDescription = ./config/cassandraApplicationDescription.xml
