web service based configuration

--- a/rSYBL-analysis-engine/src/main/resources/config.properties
+++ b/rSYBL-analysis-engine/src/main/resources/config.properties
@@ -12,7 +12,7 @@ DeploymentDescriptionPath = ./config/cassandraDeploymentDescription.xml
 #Application specific information can be given through configuration files, deployed together with the cloud service (this helps in 
 #some cases where we have a single application and don't want to configure at runtime rSYBL) or at runtime as XML strings
 #  Value for  ApplicationSpecificInformation: files/runtime
-ApplicationSpecificInformation = files
+ApplicationSpecificInformation = runtime
 #monitoring
 MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.melaPlugin.MELA_API
 #enforcement
