--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <url>https://github.com/CELAR/decision-module</url>
 
   <description>
-    CELAR c-Eclipse.
+    CELAR Decision-Making Module
   </description>
 
   <packaging>pom</packaging>
