--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
   <modules>
     <module>rSYBL-data-processing-unit</module>
     <module>rSYBL-analysis-engine</module>
+    <module>rSYBL-analysis-engine-tar</module>
     <module>rSYBL-planning-engine</module>
     <module>rSYBL-learning-engine</module>
     <module>rSYBL-cloud-interaction-unit</module>
