--- a/rSYBL-analysis-engine/src/main/resources/config.properties
+++ b/rSYBL-analysis-engine/src/main/resources/config.properties
@@ -2,13 +2,13 @@
 MonitoringServiceURL = http://localhost/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
 #MonitoringServiceURL = http://localhost:8080/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
 
-EnforcementServiceURL = http://localhost/celar-orchestrator/deployment/
+#EnforcementServiceURL = http://localhost/celar-orchestrator/deployment/
 						
 #controlAndDeployment
-CloudServiceModelDescription = ./config/cassandraApplicationDescription.xml
+#CloudServiceModelDescription = ./config/cassandraApplicationDescription.xml
 #SYBLDirectives = /config/ElasticityRequirementsSpecification.xml
-CloudServiceTOSCADescription = ./toscaService.xml
-DeploymentDescriptionPath = ./config/cassandraDeploymentDescription.xml
+#CloudServiceTOSCADescription = ./toscaService.xml
+#DeploymentDescriptionPath = ./config/cassandraDeploymentDescription.xml
 #Application specific information can be given through configuration files, deployed together with the cloud service (this helps in 
 #some cases where we have a single application and don't want to configure at runtime rSYBL) or at runtime as XML strings
 #  Value for  ApplicationSpecificInformation: files/runtime
@@ -16,13 +16,13 @@ ApplicationSpecificInformation = runtime
 #monitoring
 MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.melaPlugin.MELA_API
 #enforcement
-EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.celar.EnforcementPluginCELAR
+EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.enforcementPlugins.openstack.EnforcementOpenstackAPI
 
 
 #CloudAPIType = openstack-nova
 #CloudAPIEndpoint = http://openstack.infosys.tuwien.ac.at:5000/v2.0
 
-CompositionRulesMELA = ./config/cassandraApplicationCompositionRules.xml
+CompositionRulesMELA = ./config/compositionRules.xml
 
 #REFRESH_PERIOD - how often decisions should be taken
 REFRESH_PERIOD = 90000
