--- a/rSYBL-analysis-engine/src/main/resources/config.properties
+++ b/rSYBL-analysis-engine/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 #monitoring
-MonitoringServiceURL = http://localhost/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
-#MonitoringServiceURL = http://localhost:8080/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
+#MonitoringServiceURL = http://localhost/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
+MonitoringServiceURL = http://localhost:8080/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
 
 #EnforcementServiceURL = http://localhost/celar-orchestrator/deployment/
 						
@@ -18,11 +18,8 @@ MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.
 #enforcement
 EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.enforcementPlugins.openstack.EnforcementOpenstackAPI
 
-
-#CloudAPIType = openstack-nova
-#CloudAPIEndpoint = http://openstack.infosys.tuwien.ac.at:5000/v2.0
-
 CompositionRulesMELA = ./config/compositionRules.xml
 
 #REFRESH_PERIOD - how often decisions should be taken
 REFRESH_PERIOD = 90000
+
