--- a/rSYBL-cloud-interaction-unit/pom.xml
+++ b/rSYBL-cloud-interaction-unit/pom.xml
@@ -16,16 +16,12 @@
   
   
   <dependencies>
-  	<dependency>
-			<groupId>org.jclouds.api</groupId>
-			<artifactId>openstack-nova-ec2</artifactId>
-			<version>1.5.4</version>
-		</dependency>
 <dependency>
 	<groupId>org.jclouds.api</groupId>
-	<artifactId>openstack-nova-ec2</artifactId>
+	<artifactId>openstack-nova</artifactId>
 	<version>1.6.0</version>
 </dependency>
+            
 		        <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
