--- a/rSYBL/rSYBL-analysis-engine/src/main/resources/config.properties
+++ b/rSYBL/rSYBL-analysis-engine/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 #monitoring
 #MonitoringServiceURL = http://localhost/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
-MonitoringServiceURL = http://localhost:8080/MELA-AnalysisService-1.0-SNAPSHOT/REST_WS
+MonitoringServiceURL = http://localhost:8088/MELA/REST_WS
 
-#EnforcementServiceURL = http://localhost/celar-orchestrator/deployment/
+EnforcementServiceURL = http://localhost/celar-orchestrator/deployment/
 						
 #controlAndDeployment
 #CloudServiceModelDescription = ./config/cassandraApplicationDescription.xml
@@ -16,10 +16,10 @@ ApplicationSpecificInformation = runtime
 #monitoring
 MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.melaPlugin.MELA_API
 #enforcement
-EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.enforcementPlugins.openstack.EnforcementOpenstackAPI
+#EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.enforcementPlugins.openstack.EnforcementOpenstackAPI 		
+EnforcementPlugin = at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.celar.EnforcementPluginCELAR
 
-CompositionRulesMELA = ./config/compositionRules.xml
-
+CompositionRulesMELA = ./config/cassandraApplicationCompositionRules.xml
 #REFRESH_PERIOD - how often decisions should be taken
 REFRESH_PERIOD = 90000
 
