Changed module version to 0.0.1-SNAPSHOT.
This follows versioning of other modules and integrates better with release strategy.

--- a/rpm/pom.xml
+++ b/rpm/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>eu.celar.decision-making</groupId>
   <artifactId>decision-making-rpm</artifactId>
-  <version>0.1</version>
+  <version>0.0.1-SNAPSHOT</version>
   <name>CELAR Decision-Making Module RPM</name>
 
   <parent>
