Update the requirements to install rpm
change requirement package name from apache-tomcat to tomcat6

--- a/rpm/pom.xml
+++ b/rpm/pom.xml
@@ -76,7 +76,7 @@
           <needarch>noarch</needarch>
           <description>Decision making module, include rSYBL, MELA and SALSA</description>
           <requires>
-            <require>apache-tomcat &gt;= 6.0.20-2</require>
+            <require>tomcat6</require>
           </requires>
           <mappings>
             <mapping>
